--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - "8095:80"
       - "4430:443"
     volumes:
-      - api:/var/www
+      - ${WEB_API_DIR}:/var/www
       - ./nginx/conf.d/:/etc/nginx/conf.d/
     networks:
       - app-network
@@ -70,4 +70,3 @@ services:
 networks:
   app-network:
     driver: bridge
-
